updating libft makefile

--- a/Libraries/libft/Makefile
+++ b/Libraries/libft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:     #
 #                                                     +:+ +:+         +:+      #
-#    By: ababdelo <ababdelo@student.1337.ma>        +#+  +:+       +#+         #
+#    By: elel-yak <elel-yak@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/11 15:33:56 by ababdelo          #+#    #+#              #
-#    Updated: 2023/08/19 19:35:53 by ababdelo         ###   ########.fr        #
+#    Updated: 2023/08/30 14:50:51 by elel-yak         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ RM = rm -f
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c\
+SRCS = ft_atoi.c ft_arrdup.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c\
 			ft_lstadd_back.c ft_lstadd_back.c ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c\
 			ft_memchr.c ft_memcpy.c ft_memcmp.c ft_memset.c ft_memmove.c\
 			ft_putchar.c ft_putchar_fd.c ft_putstr.c ft_putstr_fd.c ft_putnbr.c ft_putnbr_fd.c ft_putnbr_base.c ft_putchar_fd.c ft_putendl_fd.c\
